src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .paused {
    animation-play-state: paused;
  }

  html,
  body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
  }
}


/* html,
body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
} */

/* Hide scrollbar for Chrome, Safari, and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}


/* Hide scrollbar for IE, Edge, and Firefox */
.no-scrollbar {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}


@layer utilities {
  .text-dynamic {
    font-size: min(max(48px, 5.556vw), 80px);
  }
  .w-calc-100plus300 {
    width: calc(100% + 300px);
  }
}

@layer base {
  .font-outline-2 {
    -webkit-text-stroke: 1px white;
  }
  .font-outline-4 {
    -webkit-text-stroke: 4px black;
  }
}

